--- a/dj-events-backend/package.json
+++ b/dj-events-backend/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/provider-upload-cloudinary": "^4.3.8",
     "@strapi/strapi": "4.3.8",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "slugify": "^1.6.5"
   },
   "author": {
     "name": "A Strapi developer"
